--- a/config/dev/config.yml
+++ b/config/dev/config.yml
@@ -3,7 +3,7 @@ imports:
 
 framework:
     router:
-        resource: "%kernel.root_dir%/../conf/dev/routing.yml"
+        resource: "%kernel.root_dir%/../config/dev/routing.yml"
         strict_requirements: true
     profiler: { only_exceptions: false }
 
