--- a/config/doctrine/post/Post.orm.yml
+++ b/config/doctrine/post/Post.orm.yml
@@ -9,8 +9,8 @@ App\Domain\Post\Model\Post:
                 name: player_id
                 referencedColumnName: id
                 nullable: true
-                onDelete: CASCADE
-                onUpdate: CASCADE
+#                onDelete: CASCADE
+#                onUpdate: CASCADE
             fetch: LAZY
             cascade: [ persist, remove]
             orphanRemoval: true
@@ -21,7 +21,7 @@ App\Domain\Post\Model\Post:
                 referencedColumnName: id
                 nullable: true
                 onDelete: CASCADE
-                onUpdate: CASCADE
+#                onUpdate: CASCADE
             fetch: LAZY
             cascade: [ persist, remove ]
             orphanRemoval: true
