Refereshed front end.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,45 @@ var
 mockup
 conf/bootstrap.php.cache
 composer.phar
+
+## FRONT
+
+# compiled output
+/front/dist
+/front/tmp
+/front/out-tsc
+
+# dependencies
+/front/node_modules
+
+# IDEs and editors
+/front/.project
+/front/.classpath
+/front/.c9/
+/front/*.launch
+/front/.settings/
+/front/*.sublime-workspace
+
+# IDE - VSCode
+/front/.vscode/*
+/front/!.vscode/settings.json
+/front/!.vscode/tasks.json
+/front/!.vscode/launch.json
+/front/!.vscode/extensions.json
+
+# misc
+/front/.sass-cache
+/front/connect.lock
+/front/coverage
+/front/libpeerconnection.log
+/front/npm-debug.log
+/front/testem.log
+/front/typings
+
+# e2e
+/front/e2e/*.js
+/front//e2e/*.map
+
+# System Files
+/front/.DS_Store
+/front/Thumbs.db
