--- a/deployment/nginx/riftrun.conf
+++ b/deployment/nginx/riftrun.conf
@@ -1,3 +1,8 @@
+map $http_orgin $cors_header {
+    default "";
+    "~^https?://(localhost:[0-9]+|www\.yourdomain\.com|www\.yourotherdomain\.com)" "$http_origin";
+}
+
 server {
     # this is an odd one... in order for the nginx instance to work for both devenvs:
     # (which require services on different ports as everything goes through the gateway)
@@ -14,9 +19,21 @@ server {
     root   /var/www/html/riftrun/public;
 
     location / {
-        add_header "Access-Control-Allow-Method" "POST, GET, DELETE, PUT, OPTIONS";
-        add_header "Access-Control-Allow-Headers" "Origin, Access-Control-Allow-Origin, Key, X-Access-Control-Allow-Origin, Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With";
-	try_files $uri /app_dev.php$is_args$args;
+        add_header 'Access-Control-Allow-Origin' "$cors_header" always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+        # required to be able to read Authorization header in frontend
+        add_header 'Access-Control-Expose-Headers' 'Authorization' always;
+
+        if ($request_method = 'OPTIONS') {
+            # Tell client that this pre-flight info is valid for 20 days
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    	try_files $uri /app_dev.php$is_args$args;
     }
 
     #try_files $uri $uri/ @app;
@@ -24,12 +41,9 @@ server {
 
     #location @app {
     location ~ ^/(app_dev|config)\.php(/|$) {
-	add_header "Access-Control-Allow-Headers" "Origin, Access-Control-Allow-Origin, Key, X-Access-Control-Allow-Origin, Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With";
         include fastcgi_params;
         fastcgi_pass    phpfpm:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
-#        fastcgi_param   SCRIPT_FILENAME     $document_root/app_dev.php;
-#        fastcgi_param   SCRIPT_NAME         $document_root/app_dev.php;
         fastcgi_param SCRIPT_FILENAME       $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME	    $document_root$fastcgi_script_name;
         fastcgi_param   DOCUMENT_URI        /app_dev.php;
