--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=7.1",
         "roave/security-advisories": "dev-master",
