--- a/deployment/nginx/riftrun.conf
+++ b/deployment/nginx/riftrun.conf
@@ -26,13 +26,13 @@ server {
         # required to be able to read Authorization header in frontend
         add_header 'Access-Control-Expose-Headers' 'Authorization' always;
 
-        if ($request_method = 'OPTIONS') {
+#        if ($request_method = 'OPTIONS') {
             # Tell client that this pre-flight info is valid for 20 days
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
+#            add_header 'Access-Control-Max-Age' 1728000;
+#            add_header 'Content-Type' 'text/plain charset=UTF-8';
+#            add_header 'Content-Length' 0;
+#            return 204;
+#        }
     	try_files $uri /app_dev.php$is_args$args;
     }
 
