--- a/config/validation/Player.yml
+++ b/config/validation/Player.yml
@@ -26,7 +26,7 @@ App\Domain\Player\Model\Player:
             - NotBlank: ~
             - NotNull: ~
             - Choice:
-                choices:  [EU, NA]
+                choices:  [EU, NA, AUS, ASIA]
         seasonal:
             - NotBlank: ~
             - NotNull: ~
