--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,6 @@
     "@angular/animations": "^4.3.4",
     "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.3.4",
-    "@angular/compiler": "^4.3.4",
     "@angular/core": "^4.3.4",
     "@angular/forms": "^4.3.4",
     "@angular/http": "^4.3.4",
@@ -28,7 +27,8 @@
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.1",
+    "@angular/cli": "^1.3.0",
+    "@angular/compiler": "^4.3.4",
     "@angular/compiler-cli": "^4.3.4",
     "@angular/language-service": "^4.3.4",
     "@types/jasmine": "~2.5.53",
@@ -46,6 +46,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.4.2"
   }
 }
