Working on discriminator child properties where clause. cont.

--- a/front/package.json
+++ b/front/package.json
@@ -31,8 +31,11 @@
     "@angular/compiler": "^4.3.6",
     "@angular/compiler-cli": "^4.3.6",
     "@angular/language-service": "^4.3.6",
+    "@types/core-js": "^0.9.43",
     "@types/jasmine": "^2.5.54",
     "@types/jasminewd2": "^2.0.3",
+    "@types/karma": "^0.13.36",
+    "@types/karma-jasmine": "^0.0.29",
     "@types/node": "^6.0.88",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
